--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3314,6 +3314,17 @@
   timestamp = {2018.12.07},
 }
 
+@InProceedings{Bagga1998,
+  author    = {Bagga, A. and Baldwin, B.},
+  title     = {Algorithms for scoring coreference chains},
+  booktitle = {1st LREC Workshop on Linguistics Coreference},
+  year      = {1998},
+  pages     = {563-566},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+  url       = {https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=ccdacc60d9d68dfc1f94e7c68bd56646c000e4ab},
+}
+
 @InCollection{Baghiu2019,
   author    = {Baghiu, Ș. and Pojoga, V.},
   title     = {Ruralism and Literature in Romania: An Introduction},
@@ -15584,6 +15595,17 @@
   owner     = {Vincent},
   timestamp = {2021.09.18},
   url       = {https://www.honorechampion.com/fr/champion/5812-book-08530356-9782745303561.html},
+}
+
+@InProceedings{Denis2007,
+  author    = {Denis, P. and Baldridge, J.},
+  title     = {Joint Determination of Anaphoricity and Coreference Resolution using Integer Programming},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2007},
+  pages     = {236-243},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+  url       = {https://aclanthology.org/N07-1030/},
 }
 
 @Article{Dennerlein2015,
@@ -30367,6 +30389,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@InProceedings{Jhavar2018,
+  author    = {Jhavar, H. and Mirza, P.},
+  title     = {{EMOFIEL}: Mapping Emotions of Relationships in a Story},
+  booktitle = {Web Conference},
+  year      = {2018},
+  pages     = {243-246},
+  doi       = {10.1145/3184558.3186989},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+}
+
 @InProceedings{Jhuo2014,
   author    = {Jhuo, I-H. and Lee, D. T.},
   title     = {Video Event Detection via Multi-modality Deep Learning},
@@ -36380,6 +36413,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.03.12},
 }
 
+@InProceedings{Le2024,
+  author    = {Le, N. T. and Ritter, A.},
+  title     = {Are Language Models Robust Coreference Resolvers?},
+  booktitle = {Conference on Language Modeling},
+  year      = {2024},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+  url       = {https://openreview.net/forum?id=MmBQSNHKUl},
+}
+
 @Book{Leahy1906,
   title     = {Heroic Romances in Ireland},
   publisher = {David Nutt},
@@ -36598,6 +36641,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://aclanthology.info/papers/Y12-1022/y12-1022},
 }
 
+@Article{Lee2013,
+  author    = {Lee, H. and Chang, A. and Peirsman, Y. and Chambers, N. and Surdeanu, M. and Jurafsky, D.},
+  title     = {Deterministic Coreference Resolution Based on Entity-Centric, Precision-Ranked Rules},
+  journal   = {Computational Linguistics},
+  year      = {2013},
+  volume    = {39},
+  number    = {4},
+  pages     = {885-916},
+  doi       = {10.1162/coli_a_00152},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+}
+
 @Article{Lee2014,
   author    = {Lee, J. and Kong, Y. H.},
   title     = {A dependency treebank of Chinese Buddhist texts},
@@ -36752,6 +36808,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1371/journal.pone.0204430},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@InProceedings{Lee2018d,
+  author    = {Lee, K. and He, L. and Zettlemoyer, L.},
+  title     = {Higher-Order Coreference Resolution with Coarse-to-Fine Inference},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {687-692},
+  doi       = {10.18653/v1/n18-2108},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
 }
 
 @Article{Lee2019,
@@ -39213,6 +39280,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://ceur-ws.org/Vol-3344/paper04.pdf},
 }
 
+@InProceedings{Liu2022a,
+  author    = {Liu, T. and Jiang, Y. E. and Monath, N. and Cotterell, R. and Sachan, M.},
+  title     = {Autoregressive Structured Prediction with Language Models},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2022},
+  pages     = {993-1005},
+  doi       = {10.18653/v1/2022.findings-emnlp.70},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+}
+
 @InProceedings{Liu2022aa,
   author    = {Liu, C. and Shmilovici, A. and Last, M.},
   title     = {The Same Thing - Only Different: Classification of Movies by their Story Types},
@@ -41408,6 +41486,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner       = {Vincent},
   timestamp   = {2019.04.10},
   url         = {http://www.openeering.com/sites/default/files/Text_mining_Scilab.pdf},
+}
+
+@Article{Marienberg-Milikowsky2022,
+  author    = {Marienberg-Milikowsky, I. and Vilenchik, D. and Krohn, N. and Kenzi, K. and Portnikh, R.},
+  title     = {An Experimental Undogmatic Modelling of (Hebrew) Literature: Philology, Literary Theory, and Computational Methods},
+  journal   = {Textpraxis},
+  year      = {2022},
+  volume    = {20},
+  number    = {1},
+  pages     = {6},
+  doi       = {10.17879/64059430536},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
 }
 
 @InCollection{Marin2011,
@@ -44603,6 +44694,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://books.google.fr/books?id=TsxqAAAAMAAJ},
 }
 
+@InProceedings{Moosavi2016,
+  author    = {Moosavi, N. S. and Strube, M.},
+  title     = {Which Coreference Evaluation Metric Do You Trust? A Proposal for a Link-based Entity Aware Metric},
+  booktitle = {54th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2016},
+  pages     = {632-642},
+  doi       = {10.18653/v1/p16-1060},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+}
+
 @Article{Morais2012,
   author    = {Morais, A. S. and Olsson, H. and Schooler, L. J.},
   title     = {Mapping the Structure of Semantic Memory},
@@ -46239,6 +46341,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1017/nws.2017.5},
   owner     = {Vincent},
   timestamp = {2021.09.04},
+}
+
+@Article{Needleman1970,
+  author    = {Needleman, S. B. and Wunsch, C. D.},
+  title     = {A general method applicable to the search for similarities in the amino acid sequence of two proteins},
+  journal   = {Journal of Molecular Biology},
+  year      = {1970},
+  volume    = {48},
+  number    = {3},
+  pages     = {443-453},
+  doi       = {10.1016/0022-2836(70)90057-4},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
 }
 
 @InProceedings{Nefian1999,
@@ -48667,6 +48782,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2022.04.09},
 }
 
+@InProceedings{Paolini2021,
+  author    = {Paolini, G. and Athiwaratkun, B. and Krone, J. and Ma, J. and Achille, A. and Anubhai, R. and Nogueira dos Santos, C. and Xiang, B. and Soatto, S.},
+  title     = {Structured Prediction as Translation between Augmented Natural Languages},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+  url       = {https://openreview.net/forum?id=US-TP-xnXI},
+}
+
 @Article{Papadopoulos2012a,
   author    = {Papadopoulos, S. and Kompatsiaris, Y. and Vakali, A. and Spyridonos, P.},
   title     = {Community detection in Social Media - Performance and application considerations},
@@ -49817,6 +49942,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.2307/j.ctv47w79h},
   owner     = {Vincent},
   timestamp = {2021.09.18},
+}
+
+@InProceedings{Peters2018b,
+  author    = {Peters, M. and Neumann, M. and Iyyer, M. and Gardner, M. and Clark, C. and Lee, K. and Zettlemoyer, L.},
+  title     = {Deep Contextualized Word Representations},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {2227-2237},
+  doi       = {10.18653/v1/n18-1202},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
 }
 
 @Article{Petersen2012,
@@ -52367,6 +52503,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {http://nlp.lsi.upc.edu/publications/papers/sew2009.pdf},
+}
+
+@Article{Recasens2010,
+  author    = {Recasens, M. and Hovy, E.},
+  title     = {{BLANC}: Implementing the Rand index for coreference evaluation},
+  journal   = {Natural Language Engineering},
+  year      = {2010},
+  volume    = {17},
+  number    = {4},
+  pages     = {485-510},
+  doi       = {10.1017/s135132491000029x},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
 }
 
 @InProceedings{Recchia2014,
@@ -56283,6 +56432,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2023.08.12},
   url       = {https://psyarxiv.com/fn4my/},
+}
+
+@InProceedings{Schmidt2022b,
+  author    = {Schmidt, D. and Krug, M. and Puppe, F.},
+  title     = {Adapting Coreference Algorithms to German Fairy Tales},
+  booktitle = {Digital Humanities im deutschsprachigen Raum},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+  url       = {https://zenodo.org/records/6328165},
 }
 
 @Article{Schmidt2024,
@@ -64728,6 +64887,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url         = {https://cs.toronto.edu/pub/gh/Vishnubhotla-PhD-thesis-2024.pdf},
 }
 
+@InProceedings{Vishnubhotla2024a,
+  author    = {Vishnubhotla, K. and Hammond, A. and Hirst, G. and Mohammad, S.},
+  title     = {The Emotion Dynamics of Literary Novels},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2024},
+  pages     = {2557-2574},
+  doi       = {10.18653/v1/2024.findings-acl.150},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+}
+
 @Article{Vishwanathan2010,
   author    = {Vishwanathan, S. V. N. and Schraudolph, N. N. and Kondor, R. and Borgwardt, K. M.},
   title     = {Graph Kernels},
@@ -68067,6 +68237,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2024.06.24},
 }
 
+@InProceedings{Xu2020a,
+  author    = {Xu, L. and Choi, J. D.},
+  title     = {Revealing the Myth of Higher-Order Inference in Coreference Resolution},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {8527-8533},
+  doi       = {10.18653/v1/2020.emnlp-main.686},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+}
+
 @InProceedings{Xu2021,
   author    = {Xu, M. and Li, L. and Wong, D. F. and Liu, Q. and Chao, L. S.},
   title     = {Document Graph for Neural Machine Translation},
@@ -68733,6 +68914,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2021.12.28},
   url       = {http://ceur-ws.org/Vol-2769/paper_02.pdf},
+}
+
+@InProceedings{Yavuz2020c,
+  author    = {Yavuz, M. C.},
+  title     = {Analyses of character emotions in dramatic works by using emolex unigrams},
+  booktitle = {Italian Conference on Computational Linguistics},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
+  url       = {https://ceur-ws.org/Vol-2769/paper_02.pdf},
 }
 
 @InProceedings{Yavuz2021,
@@ -70389,6 +70580,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1007/978-3-030-58568-6_13},
   owner     = {Vincent},
   timestamp = {2023.03.17},
+}
+
+@Article{Zhong2023,
+  author    = {Zhong, L. and Wu, J. and Li, Q. and Peng, H. and Wu, X.},
+  title     = {A Comprehensive Survey on Automatic Knowledge Graph Construction},
+  journal   = {ACM Computing Surveys},
+  year      = {2023},
+  volume    = {56},
+  number    = {4},
+  pages     = {1-62},
+  doi       = {10.1145/3618295},
+  owner     = {Vincent},
+  timestamp = {2025.01.15},
 }
 
 @InProceedings{Zhong2024,
