--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1861,6 +1861,17 @@
   timestamp = {2024.03.17},
 }
 
+@InProceedings{Amalvy2024e,
+  author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
+  title     = {The Role of Natural Language Processing Tasks in Automatic Literary Character Network Construction},
+  booktitle = {31st International Conference on Computational Linguistics},
+  year      = {2025},
+  pages     = {8462-8473},
+  owner     = {Vincent},
+  timestamp = {2024.06.17},
+  url       = {https://aclanthology.org/2025.coling-main.566/},
+}
+
 @Article{Amancio2012,
   author    = {Amancio, D. R. and Oliveira, O. N. and da Fontoura Costa, L.},
   title     = {Three-feature model to reproduce the topology of citation networks and the effects from authors' visibility on their h-index},
@@ -3289,6 +3300,17 @@
   doi       = {10.1371/journal.pone.0151784},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@InProceedings{Bae2025,
+  author    = {Bae, S. and Cho, G. and Cheong, Y.-G. and Li, B.},
+  title     = {{CharMoral}: A Character Morality Dataset for Morally Dynamic Character Analysis in Long-Form Narratives},
+  booktitle = {31st International Conference on Computational Linguistics},
+  year      = {2025},
+  pages     = {8809-8818},
+  owner     = {Vincent},
+  timestamp = {2025.01.23},
+  url       = {https://aclanthology.org/2025.coling-main.589/},
 }
 
 @Book{Baer2012,
@@ -10869,6 +10891,17 @@
   owner       = {Vincent},
   timestamp   = {2018.06.12},
   url         = {http://cs224d.stanford.edu/reports/ChagantyArun.pdf},
+}
+
+@InProceedings{Chai2023,
+  author    = {Chai, H. and Strube, M.},
+  title     = {Investigating Multilingual Coreference Resolution by Universal Annotations},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2023},
+  pages     = {10010-10024},
+  doi       = {10.18653/v1/2023.findings-emnlp.671},
+  owner     = {Vincent},
+  timestamp = {2025.01.24},
 }
 
 @InProceedings{Chaintreau2008,
@@ -31030,6 +31063,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://www.research.manchester.ac.uk/portal/files/162575015/ethesis_with_cover_page_FINAL_PJ.pdf},
 }
 
+@InCollection{Jones2025,
+  author    = {Jones, P. and Burgdorf, K.},
+  title     = {Film networks},
+  booktitle = {Handbook of Culture and Social Networks: Research Handbooks on Social Networks series},
+  publisher = {Edward Elgar Publishing},
+  year      = {2025},
+  chapter   = {11},
+  pages     = {139-153},
+  doi       = {10.4337/9781803928784.00017},
+  owner     = {Vincent},
+  timestamp = {2025.01.19},
+}
+
 @Article{Jorge2019,
   author    = {Jorge, A. M. and Campos, R. and Jatowt, A. and Nunes, S.},
   title     = {Preface to the Information Processing \& Management Journal Special Issue on Narrative Extraction from Texts (Text2Story)},
@@ -40207,6 +40253,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2022.09.14},
 }
 
+@Article{Lv2022e,
+  author    = {Lv, J. and Shen, Q. and Lv, M. and Shi, L.},
+  title     = {Relation Extraction from Videos Based on IoT Intelligent Collaboration Framework},
+  journal   = {Mathematics},
+  year      = {2022},
+  volume    = {10},
+  number    = {18},
+  pages     = {3308},
+  doi       = {10.3390/math10183308},
+  owner     = {Vincent},
+  timestamp = {2025.01.22},
+}
+
 @Article{Lyle2006,
   author    = {Lyle, E.},
   title     = {Narrative Form and the Structure of Myth},
@@ -41828,6 +41887,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1109/eScience.2015.12},
   owner     = {Vincent},
   timestamp = {2018.10.27},
+}
+
+@InProceedings{Martschat2014,
+  author    = {Martschat, S. and Strube, M.},
+  title     = {Recall Error Analysis for Coreference Resolution},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2014},
+  pages     = {2070-2081},
+  doi       = {10.3115/v1/d14-1221},
+  owner     = {Vincent},
+  timestamp = {2025.01.24},
 }
 
 @Article{Marvel2009,
@@ -54673,6 +54743,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2020.03.24},
 }
 
+@InProceedings{Rueda2024,
+  author    = {Rueda, A. and Alvarez-Mellado, E. and Lignos, C.},
+  title     = {CoNLL#: Fine-grained Error Analysis and a Corrected Test Set for CoNLL-03 English},
+  booktitle = {Joint International Conference on Computational Linguistics, Language Resources and Evaluation},
+  year      = {2024},
+  pages     = {3718-3728},
+  abstract  = {Modern named entity recognition systems have steadily improved performance in the age of larger and more powerful neural models. However, over the past several years, the state-of-the-art has seemingly hit another plateau on the benchmark CoNLL-03 English dataset. In this paper, we perform a deep dive into the test outputs of the highest-performing NER models, conducting a fine-grained evaluation of their performance by introducing new document-level annotations on the test set. We go beyond F1 scores by categorizing errors in order to interpret the true state of the art for NER and guide future work. We review previous attempts at correcting the various flaws of the test set and introduce CoNLL#, a new corrected version of the test set that addresses its systematic and most prevalent errors, allowing for low-noise, interpretable error analysis.},
+  owner     = {Vincent},
+  timestamp = {2025.01.24},
+  url       = {https://aclanthology.org/2024.lrec-main.330/},
+}
+
 @Article{Ruegg2020,
   author    = {Ruegg, C. and Lee, J. J.},
   title     = {Epic social networks and Eve's centrality in Milton's Paradise Lost},
@@ -57431,6 +57513,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1016/j.poetic.2016.12.002},
   owner     = {Vincent},
   timestamp = {2021.09.18},
+}
+
+@InCollection{Serino2025,
+  author    = {Serino, M.},
+  title     = {Theatre and networks},
+  booktitle = {Handbook of Culture and Social Networks: Research Handbooks on Social Networks series},
+  publisher = {Edward Elgar Publishing},
+  year      = {2025},
+  chapter   = {13},
+  pages     = {168-178},
+  doi       = {10.4337/9781803928784.00019},
+  owner     = {Vincent},
+  timestamp = {2025.01.19},
 }
 
 @Article{Serrano2003,
@@ -70469,6 +70564,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2024.02.22},
   url       = {https://arxiv.org/abs/2402.11051},
+}
+
+@InProceedings{Zhao2025,
+  author    = {Zhao, H. and Yan, Y. and Zhu, S. and Liu, H. and Jia, Y. and Zan, H. and Peng, M.},
+  title     = {GenWebNovel: A Genre-oriented Corpus of Entities in Chinese Web Novels},
+  booktitle = {31st International Conference on Computational Linguistics},
+  year      = {2025},
+  pages     = {3836-3849},
+  owner     = {Vincent},
+  timestamp = {2025.01.24},
+  url       = {https://aclanthology.org/2025.coling-main.259/},
 }
 
 @InProceedings{Zheleva2009,
